<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/content_margin"
    android:layout_marginStart="@dimen/content_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step2_title"
        android:textSize="@dimen/text_m" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/delay"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/delayNumberPicker"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/delivery_priority"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/deliveryPrioritySpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_priority_hint"
        android:textSize="@dimen/text_xs"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/notification_priority"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/notificationPrioritySpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

    <TextView
        android:id="@+id/notificationPriorityChannelHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_channel_hint"
        android:textColor="@color/warning"
        android:textSize="@dimen/text_xs"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/notificationPriorityDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_priority_hint"
        android:textSize="@dimen/text_xs"
        android:textStyle="italic" />


</LinearLayout>
