<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/content_margin"
    android:layout_marginStart="@dimen/content_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1_title"
        android:textSize="@dimen/text_m" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/play_services_installed"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/step1Item1FrameLayout"
            android:layout_width="32dp"
            android:layout_height="32dp">

            <ImageView
                android:id="@+id/step1Item1SuccessImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_check_white_36dp"
                android:tint="@color/success"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/step1Item1ErrorImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close_white_36dp"
                android:tint="@color/error"
                android:visibility="invisible" />


        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/internet_connectivity"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/step1Item2FrameLayout"
            android:layout_width="32dp"
            android:layout_height="32dp">

            <ImageView
                android:id="@+id/step1Item2SuccessImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_check_white_36dp"
                android:tint="@color/success"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/step1Item2ErrorImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close_white_36dp"
                android:tint="@color/error"
                android:visibility="invisible" />


        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/register_for_push"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/step1Item3FrameLayout"
            android:layout_width="32dp"
            android:layout_height="32dp">

            <ImageView
                android:id="@+id/step1Item3SuccessImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_check_white_36dp"
                android:tint="@color/success"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/step1Item3ErrorImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close_white_36dp"
                android:tint="@color/error"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/step1Item3ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:indeterminate="true"
                android:visibility="invisible" />

        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/connection_to_server"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_s"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/step1Item4FrameLayout"
            android:layout_width="32dp"
            android:layout_height="32dp">

            <ImageView
                android:id="@+id/step1Item4SuccessImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_check_white_36dp"
                android:tint="@color/success"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/step1Item4ErrorImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close_white_36dp"
                android:tint="@color/error"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/step1Item4ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:indeterminate="true"
                android:visibility="invisible" />

        </FrameLayout>


    </LinearLayout>


</LinearLayout>
